[package]
name = "ts-SaaS"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
ark-std = { version = "0.4", default_features = false }
ark-ec = { version = "0.4", default_features = false }
ark-ff = { version = "0.4", default_features = false }
ark-groth16 = { version = "0.4", default_features = false }
ark-poly = { version = "0.4", default_features = false }
ark-relations = { version = "0.4", default_features = false } 
ark-serialize = { version = "0.4", default-features = false }
blake2b_simd = "1.0.2"
rand_core = { version = "0.6", features = ["getrandom"] }
rayon = { version = "1.8.0", optional = true }

[dev-dependencies]
ark-r1cs-std = "0.4"
ark-snark = "0.4"
ark-bn254 = "0.4"
criterion = { version = "0.4", features = ["html_reports"] }
rand_chacha = "0.3.1"

[features]
default = ["std"]
std = []
parallel = ["ark-ec/parallel", "ark-ff/parallel", "ark-groth16/parallel", "rayon"]